Add three languages support on main page, a lot of major&minor changes

--- a/resources/mails/email-confirmation.html
+++ b/resources/mails/email-confirmation.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>JiraRush - подтверждение почты</title>
+    <title th:text="#{email.confirmation.title}">JiraRush - Email Confirmation</title>
+    <!--    <title>JiraRush - подтверждение почты</title>-->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
-<p th:text="'Привет, ' + ${user.firstName} + '.'"/>
-<p>Чтобы завершить настройку учетной записи и начать пользоваться JiraRush, подтвердите, что вы правильно указали вашу
-    электронную почту.</p>
-<a th:href="${confirmationUrl}">Подтвердить почту</a>
+<p th:text="#{email.confirmation.greeting(${user.firstName})}">Hello, ${user.firstName}.</p>
+<p th:text="#{email.confirmation.body}">To complete the setup of your account and start using JiraRush, please confirm
+    your email address.</p>
+<a th:href="${confirmationUrl}" th:text="#{email.confirmation.link}">Confirm Email</a>
+<div>
+    <a href="?lang=en">English</a> |
+    <a href="?lang=ru">Русский</a> |
+    <a href="?lang=it">Italiano</a>
+</div>
+<!--<p th:text="'Привет, ' + ${user.firstName} + '.'"/>-->
+<!--<p>Чтобы завершить настройку учетной записи и начать пользоваться JiraRush, подтвердите, что вы правильно указали вашу-->
+<!--    электронную почту.</p>-->
+<!--<a th:href="${confirmationUrl}">Подтвердить почту</a>-->
 </body>
 </html>
