--- a/resources/mails/password-reset.html
+++ b/resources/mails/password-reset.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
-    <title>JiraRush - установить новый пароль</title>
+    <title th:text="#{email.passwordreset.title}">JiraRush - Reset Password</title>
+    <!--    <title>JiraRush - установить новый пароль</title>-->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 </head>
 <body>
-<p th:text="'Привет, ' + ${user.firstName} + '.'"/>
-<p th:text="'Мы получили запрос на установку нового пароля JiraRush для учетной записи: ' + ${user.email} + '.'"/>
-<a th:href="${resetUrl}">Установить пароль</a>
+<p th:text="#{email.passwordreset.greeting(${user.firstName})}">Hello, ${user.firstName}.</p>
+<p th:text="#{email.passwordreset.body(${user.email})}">We have received a request to reset the JiraRush password for
+    the account: ${user.email}.</p>
+<a th:href="${resetUrl}" th:text="#{email.passwordreset.link}">Reset Password</a>
+<div>
+    <a href="?lang=en">English</a> |
+    <a href="?lang=ru">Русский</a> |
+    <a href="?lang=it">Italiano</a>
+</div>
+<!--<p th:text="'Привет, ' + ${user.firstName} + '.'"/>-->
+<!--<p th:text="'Мы получили запрос на установку нового пароля JiraRush для учетной записи: ' + ${user.email} + '.'"/>-->
+<!--<a th:href="${resetUrl}">Установить пароль</a>-->
 </body>
 </html>
